--- a/cloudformation/cognito.yaml
+++ b/cloudformation/cognito.yaml
@@ -6,6 +6,7 @@
 Resources:
   UserPool:
     Type: AWS::Cognito::UserPool
+    Condition: isUsingDefaultUserPool
     Properties:
       AccountRecoverySetting:
         RecoveryMechanisms:
@@ -24,6 +25,7 @@ Resources:
           Name: cc_confirmed
   UserPoolClient:
     Type: AWS::Cognito::UserPoolClient
+    Condition: isUsingDefaultUserPool
     Properties:
       AllowedOAuthFlows:
         - code
@@ -45,12 +47,14 @@ Resources:
         - COGNITO
       PreventUserExistenceErrors: ENABLED
   UserPoolDomain:
+    Condition: isUsingDefaultUserPool
     Type: AWS::Cognito::UserPoolDomain
     Properties:
       Domain: !Ref UserPoolClient
       UserPoolId: !Ref UserPool
   PractitionerUserGroup:
     Type: AWS::Cognito::UserPoolGroup
+    Condition: isUsingDefaultUserPool
     Properties:
       Description: This is a member of the hospital staff, who directly helps patients
       GroupName: practitioner
@@ -58,6 +62,7 @@ Resources:
       UserPoolId: !Ref UserPool
   NonPractitionerUserGroup:
     Type: AWS::Cognito::UserPoolGroup
+    Condition: isUsingDefaultUserPool
     Properties:
       Description: This is a member of the hospital staff who needs access to non-medical record
       GroupName: non-practitioner
@@ -65,6 +70,7 @@ Resources:
       UserPoolId: !Ref UserPool
   AuditorUserGroup:
     Type: AWS::Cognito::UserPoolGroup
+    Condition: isUsingDefaultUserPool
     Properties:
       Description: Someone who needs read, v_read and search access on patients
       GroupName: auditor
