--- a/cloudformation/elasticsearch.yaml
+++ b/cloudformation/elasticsearch.yaml
@@ -47,7 +47,7 @@ Resources:
     Type: AWS::IAM::Role
     Condition: isDev
     Properties:
-      RoleName: !Join ['-', ['kibana-cognito-role', !Ref AWS::Region]]
+      RoleName: !Join ['-', ['kibana-cognito-role', !Ref Stage, !Ref AWS::Region]]
       ManagedPolicyArns:
         - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonESCognitoAccess'
       AssumeRolePolicyDocument:
@@ -62,7 +62,7 @@ Resources:
     Type: 'AWS::IAM::Role'
     Condition: isDev
     Properties:
-      RoleName: !Join ['-', ['admin-kibana-access-role', !Ref AWS::Region]]
+      RoleName: !Join ['-', ['admin-kibana-access-role', !Ref Stage, !Ref AWS::Region]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
