--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "aws-sdk": "^2.785.0",
     "axios": "^0.21.1",
     "fhir-works-on-aws-authz-rbac": "4.1.1",
-    "fhir-works-on-aws-interface": "9.0.0",
-    "fhir-works-on-aws-persistence-ddb": "3.3.4",
-    "fhir-works-on-aws-routing": "5.4.1",
+    "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
+    "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
+    "fhir-works-on-aws-routing": "link:../fhir-works-on-aws-routing",
     "fhir-works-on-aws-search-es": "2.6.1",
     "serverless-http": "^2.3.1",
     "yargs": "^16.2.0"
