Restored db policies to Retain

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -261,8 +261,8 @@ resources:
               - id: W28
                 reason: 'We want to set the table explicit name'
         Type: AWS::DynamoDB::Table
-        DeletionPolicy: Delete
-        UpdateReplacePolicy: Delete
+        DeletionPolicy: Retain
+        UpdateReplacePolicy: Retain
         Properties:
           TableName: '${self:custom.resourceTableName}'
           AttributeDefinitions:
@@ -340,8 +340,8 @@ resources:
                 reason: 'We want to set the table explicit name'
               - id: W78
                 reason: 'Backup not explicitly needed'
-        DeletionPolicy: Delete
-        UpdateReplacePolicy: Delete
+        DeletionPolicy: Retain
+        UpdateReplacePolicy: Retain
         Properties:
           TableName: '${self:custom.oldResourceTableName}'
           AttributeDefinitions:
