--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
     "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
     "fhir-works-on-aws-routing": "link:../fhir-works-on-aws-routing",
-    "fhir-works-on-aws-search-es": "2.6.1",
+    "fhir-works-on-aws-search-es": "link:../fhir-works-on-aws-search-es",
     "serverless-http": "^2.3.1",
     "yargs": "^16.2.0",
 	"cors": "^2.8.5",
