--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,3 +18,6 @@ phases:
         - mkdir -p fhir-works-on-aws-persistence-ddb && cp -r $CODEBUILD_SRC_DIR_FWPDDB/* ./fhir-works-on-aws-persistence-ddb && mv fhir-works-on-aws-persistence-ddb ../
         - (cd ../fhir-works-on-aws-persistence-ddb && yarn install)
         - yarn install
+    artifacts:
+      files:
+        - '**/*'
