Added output artifact

--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -18,3 +18,7 @@ phases:
         - (cd $CODEBUILD_SRC_DIR_DepCog && ls -al)
         - (cd $CODEBUILD_SRC_DIR_DepCogIDP && ls -al)
         - (cd fhirworks/fhir-works-on-aws-deployment/scripts && ./install.sh --silentInstall "yes" --stage "$STAGE_NAME" --stagetype "$STAGE_TYPE" --region "$REGION" --pool "$POOL" --poolclient "$POOL_CLIENT" --pooldomain "$POOL_DOMAIN" --multiTenancyStrategy "UrlBased" --multiTenancyTokenClaim "cognito:groups" --corsOrigins "ALL_ORIGINS" --useApiKeys "no" --multiTenancyTokenClaimValuePrefix "quentry:")
+        - echo "{ \"test\": \"ttt\" }" > template-export.yml
+artifacts:
+  files:
+    - template-export.yml
